# aires

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  compile_flags.txt
data/: config.h.in
data/shaders/graphics-object/gl3/: shader.vert  texture2d.frag  texture3d-frag.glsl  textured-frag.glsl  untextured.frag  vert.glsl
include/aires/: graphics.hpp  object.hpp
include/aires/graphics/: api.hpp  backend.hpp  camera.hpp  color.hpp  object.hpp  shader.hpp  texture.hpp  vertex.hpp  window.hpp
include/aires/graphics/apis/: gl3.hpp
include/aires/graphics/backends/: glfw.hpp
include/aires/utils/: file.hpp
scripts/: install-shaderc.sh
src/: graphics.cpp
src/graphics/: api.cpp  backend.cpp  camera.cpp  object.cpp  shader.cpp  texture.cpp  vertex.cpp  window.cpp
src/graphics/apis/: gl3.cpp
src/graphics/backends/: glfw.cpp
src/utils/: file.cpp
tests/assets/shaders/gl3/: test-frag.glsl  test-vert.glsl
tests/graphics/gl3/: shaders.cpp
tests/src/graphics/gl3/: graphics-object.cpp  rendering.cpp  shaders.cpp  textures.cpp
